feat: board CRUD, refactor: recipe