@@ -1,8 +1,8 @@
 package doubleni.mealrecipe.service;
 
 import doubleni.mealrecipe.config.exception.BaseException;
-import doubleni.mealrecipe.model.DTO.GetRecipeIdRes;
-import doubleni.mealrecipe.model.DTO.RecipeResponse;
+import doubleni.mealrecipe.model.DTO.GetRecipeRes;
+//import doubleni.mealrecipe.model.RcpPartsDtls;
 import doubleni.mealrecipe.model.Recipe;
 import doubleni.mealrecipe.repository.RecipeRepository;
 import lombok.RequiredArgsConstructor;
@@ -16,7 +16,6 @@ import java.io.FileReader;
 import java.util.ArrayList;
 import java.util.List;
 import java.util.Optional;
-import java.util.stream.Collectors;
 
 import static doubleni.mealrecipe.config.exception.BaseResponseStatus.*;
 
@@ -33,7 +32,6 @@ public class RecipeService {
 
         try{
             //json 파일 이름
-//            String fileName = "recipe.json";
             String fileName = "recipes.json";
 
             String projectPath = System.getProperty("user.dir") + "\\src\\main\\resources\\json\\"+fileName;
@@ -92,7 +90,7 @@ public class RecipeService {
 
                     // 해시태그
                     String hash_tag=(String) result.get("HASH_TAG");
-                    recipe.setInfoNa(hash_tag);
+                    recipe.setHashTag(hash_tag);
 
                     // 이미지 경로(소)
                     String att_file_no_main=(String) result.get("ATT_FILE_NO_MAIN");
@@ -100,76 +98,118 @@ public class RecipeService {
 
                     // 이미지 경로(대)
                     String att_file_no_mk=(String) result.get("ATT_FILE_NO_MK");
-                    recipe.setAttFileNoMain(att_file_no_mk);
+                    recipe.setAttFileNoMk(att_file_no_mk);
 
                     // 재료 정보
                     List<String> rcp_parts_dtls = (List<String>) result.get("RCP_PARTS_DTLS");
                     recipe.setRcpPartsDtls(rcp_parts_dtls);
 
-                    // 레시피 설명
-                    String manual01=(String) result.get("MANUAL_01");
-                    recipe.setAttFileNoMain(manual01);
-
-                    // 레시피 이미지
+                    // 레시피 설명, 레시피 이미지
+                    String manual01=(String) result.get("MANUAL01");
+                    recipe.setManual01(manual01);
                     String manual_img01=(String) result.get("MANUAL_IMG01");
-                    recipe.setAttFileNoMain(manual_img01);
+                    recipe.setManualImg01(manual_img01);
+
+                    String manual02=(String) result.get("MANUAL02");
+                    recipe.setManual02(manual02);
+                    String manual_img02=(String) result.get("MANUAL_IMG02");
+                    recipe.setManualImg02(manual_img02);
+
+                    String manual03=(String) result.get("MANUAL03");
+                    recipe.setManual03(manual03);
+                    String manual_img03=(String) result.get("MANUAL_IMG03");
+                    recipe.setManualImg03(manual_img03);
+
+                    String manual04=(String) result.get("MANUAL04");
+                    recipe.setManual04(manual04);
+                    String manual_img04=(String) result.get("MANUAL_IMG04");
+                    recipe.setManualImg04(manual_img04);
+
+                    String manual05=(String) result.get("MANUAL05");
+                    recipe.setManual05(manual05);
+                    String manual_img05=(String) result.get("MANUAL_IMG05");
+                    recipe.setManualImg05(manual_img05);
+
+                    String manual06=(String) result.get("MANUAL06");
+                    recipe.setManual06(manual06);
+                    String manual_img06=(String) result.get("MANUAL_IMG06");
+                    recipe.setManualImg06(manual_img06);
+
+                    String manual07=(String) result.get("MANUAL07");
+                    recipe.setManual07(manual07);
+                    String manual_img07=(String) result.get("MANUAL_IMG07");
+                    recipe.setManualImg07(manual_img07);
+
+                    String manual08=(String) result.get("MANUAL08");
+                    recipe.setManual08(manual08);
+                    String manual_img08=(String) result.get("MANUAL_IMG08");
+                    recipe.setManualImg08(manual_img08);
+
+                    String manual09=(String) result.get("MANUAL09");
+                    recipe.setManual09(manual09);
+                    String manual_img09=(String) result.get("MANUAL_IMG09");
+                    recipe.setManualImg09(manual_img09);
+
+                    String manual10=(String) result.get("MANUAL10");
+                    recipe.setManual10(manual10);
+                    String manual_img10=(String) result.get("MANUAL_IMG10");
+                    recipe.setManualImg10(manual_img10);
+
+                    String manual11=(String) result.get("MANUAL11");
+                    recipe.setManual11(manual11);
+                    String manual_img11=(String) result.get("MANUAL_IMG11");
+                    recipe.setManualImg11(manual_img11);
+
+                    String manual12=(String) result.get("MANUAL12");
+                    recipe.setManual12(manual12);
+                    String manual_img12=(String) result.get("MANUAL_IMG12");
+                    recipe.setManualImg12(manual_img12);
+
+                    String manual13=(String) result.get("MANUAL13");
+                    recipe.setManual13(manual13);
+                    String manual_img13=(String) result.get("MANUAL_IMG13");
+                    recipe.setManualImg13(manual_img13);
+
+                    String manual14=(String) result.get("MANUAL14");
+                    recipe.setManual14(manual14);
+                    String manual_img14=(String) result.get("MANUAL_IMG14");
+                    recipe.setManualImg14(manual_img14);
+
+                    String manual15=(String) result.get("MANUAL15");
+                    recipe.setManual15(manual15);
+                    String manual_img15=(String) result.get("MANUAL_IMG15");
+                    recipe.setManualImg15(manual_img15);
+
+                    String manual16=(String) result.get("MANUAL16");
+                    recipe.setManual16(manual16);
+                    String manual_img16=(String) result.get("MANUAL_IMG16");
+                    recipe.setManualImg16(manual_img16);
+
+                    String manual17=(String) result.get("MANUAL17");
+                    recipe.setManual17(manual17);
+                    String manual_img17=(String) result.get("MANUAL_IMG17");
+                    recipe.setManualImg17(manual_img17);
+
+                    String manual18=(String) result.get("MANUAL18");
+                    recipe.setManual18(manual18);
+                    String manual_img18=(String) result.get("MANUAL_IMG18");
+                    recipe.setManualImg18(manual_img18);
+
+                    String manual19=(String) result.get("MANUAL19");
+                    recipe.setManual19(manual19);
+                    String manual_img19=(String) result.get("MANUAL_IMG19");
+                    recipe.setManualImg19(manual_img19);
+
+                    String manual20=(String) result.get("MANUAL20");
+                    recipe.setManual20(manual20);
+                    String manual_img20=(String) result.get("MANUAL_IMG20");
+                    recipe.setManualImg20(manual_img20);
 
                     // 저감 조리법
                     String rcp_na_tip=(String) result.get("RCP_NA_TIP");
-                    recipe.setAttFileNoMain(rcp_na_tip);
-
-                    System.out.println("rcpSeq = " + rcp_seq);
-                    System.out.println("rcpNm = " + rcp_nm);
-                    System.out.println("rcpWay2 = " + rcp_way2);
-                    System.out.println("rcpPat2 = " + rcp_pat2);
-                    System.out.println("manual01 = " + manual01);
-                    System.out.println("manualImg01 = " + manual_img01);
-                    System.out.println("RCP_NA_TIP = " + rcp_na_tip);
-                    System.out.println("RCP_PARTS_DTLS = " + rcp_parts_dtls.toString());
-
+                    recipe.setRcpNaTip(rcp_na_tip);
 
                     recipeRepository.save(recipe);
-
-//                    String manual02;
-//                    String manual_img02;
-//                    String manual03;
-//                    String manual_img03;
-//                    String manual04;
-//                    String manual_img04;
-//                    String manual05;
-//                    String manual_img05;
-//                    String manual06;
-//                    String manual_img06;
-//                    String manual07;
-//                    String manual_img07;
-//                    String manual08;
-//                    String manual_img08;
-//                    String manual09;
-//                    String manual_img09;
-//                    String manual10;
-//                    String manual_img10;
-//                    String manual11;
-//                    String manual_img11;
-//                    String manual12;
-//                    String manual_img12;
-//                    String manual13;
-//                    String manual_img13;
-//                    String manual14;
-//                    String manual_img14;
-//                    String manual15;
-//                    String manual_img15;
-//                    String manual16;
-//                    String manual_img16;
-//                    String manual17;
-//                    String manual_img17;
-//                    String manual18;
-//                    String manual_img18;
-//                    String manual19;
-//                    String manual_img19;
-//                    String manual20;
-//                    String manual_img20;
-
-
                 }
             }
 
@@ -180,13 +220,17 @@ public class RecipeService {
     }
 
     /* 레시피 id로 레시피 조회 */
-    public GetRecipeIdRes getRecipeIdRes(Long rcpId) throws BaseException {
+    public GetRecipeRes getRecipeIdRes(Long rcpId) throws BaseException {
         try{
             Optional<Recipe> recipeOptional = recipeRepository.findByRcpId(rcpId);
             if (recipeOptional.isPresent()){
                 Recipe recipe = recipeOptional.get();
 
-                GetRecipeIdRes getRecipeIdRes = new GetRecipeIdRes();
+//                RcpPartsDtls rcpPartsDtls = new RcpPartsDtls();
+//                rcpPartsDtls.setRcpId(recipe.getRcpId());
+//                rcpPartsDtls.setRcpPartsDtls((List<String>) recipe.getRcpPartsDtls());
+
+                GetRecipeRes getRecipeIdRes = new GetRecipeRes();
                 getRecipeIdRes.setRcpId(recipe.getRcpId());
                 getRecipeIdRes.setRcpSeq(recipe.getRcpSeq());
                 getRecipeIdRes.setRcpNm(recipe.getRcpNm());
@@ -204,47 +248,48 @@ public class RecipeService {
 
                 /* 재료 */
                 getRecipeIdRes.setRcpPartsDtls(new ArrayList<>(recipe.getRcpPartsDtls()));
+//                getRecipeIdRes.setRcpPartsDtls(rcpPartsDtls.getRecipe().getRcpPartsDtls());
 
                 getRecipeIdRes.setManual01(recipe.getManual01());
                 getRecipeIdRes.setManualImg01(recipe.getManualImg01());
-//                getRecipeIdRes.setManual02(recipe.getManual02());
-//                getRecipeIdRes.setManualImg02(recipe.getManualImg02());
-//                getRecipeIdRes.setManual03(recipe.getManual03());
-//                getRecipeIdRes.setManualImg03(recipe.getManualImg03());
-//                getRecipeIdRes.setManual04(recipe.getManual04());
-//                getRecipeIdRes.setManualImg04(recipe.getManualImg04());
-//                getRecipeIdRes.setManual05(recipe.getManual05());
-//                getRecipeIdRes.setManualImg05(recipe.getManualImg05());
-//                getRecipeIdRes.setManual06(recipe.getManual06());
-//                getRecipeIdRes.setManualImg06(recipe.getManualImg06());
-//                getRecipeIdRes.setManual07(recipe.getManual07());
-//                getRecipeIdRes.setManualImg07(recipe.getManualImg07());
-//                getRecipeIdRes.setManual08(recipe.getManual08());
-//                getRecipeIdRes.setManualImg08(recipe.getManualImg08());
-//                getRecipeIdRes.setManual09(recipe.getManual09());
-//                getRecipeIdRes.setManualImg09(recipe.getManualImg09());
-//                getRecipeIdRes.setManual10(recipe.getManual10());
-//                getRecipeIdRes.setManualImg10(recipe.getManualImg10());
-//                getRecipeIdRes.setManual11(recipe.getManual11());
-//                getRecipeIdRes.setManualImg11(recipe.getManualImg11());
-//                getRecipeIdRes.setManual12(recipe.getManual12());
-//                getRecipeIdRes.setManualImg12(recipe.getManualImg12());
-//                getRecipeIdRes.setManual13(recipe.getManual13());
-//                getRecipeIdRes.setManualImg13(recipe.getManualImg13());
-//                getRecipeIdRes.setManual14(recipe.getManual14());
-//                getRecipeIdRes.setManualImg14(recipe.getManualImg14());
-//                getRecipeIdRes.setManual15(recipe.getManual15());
-//                getRecipeIdRes.setManualImg15(recipe.getManualImg15());
-//                getRecipeIdRes.setManual16(recipe.getManual16());
-//                getRecipeIdRes.setManualImg16(recipe.getManualImg16());
-//                getRecipeIdRes.setManual17(recipe.getManual17());
-//                getRecipeIdRes.setManualImg17(recipe.getManualImg17());
-//                getRecipeIdRes.setManual18(recipe.getManual18());
-//                getRecipeIdRes.setManualImg18(recipe.getManualImg18());
-//                getRecipeIdRes.setManual19(recipe.getManual19());
-//                getRecipeIdRes.setManualImg19(recipe.getManualImg19());
-//                getRecipeIdRes.setManual20(recipe.getManual20());
-//                getRecipeIdRes.setManualImg20(recipe.getManualImg20());
+                getRecipeIdRes.setManual02(recipe.getManual02());
+                getRecipeIdRes.setManualImg02(recipe.getManualImg02());
+                getRecipeIdRes.setManual03(recipe.getManual03());
+                getRecipeIdRes.setManualImg03(recipe.getManualImg03());
+                getRecipeIdRes.setManual04(recipe.getManual04());
+                getRecipeIdRes.setManualImg04(recipe.getManualImg04());
+                getRecipeIdRes.setManual05(recipe.getManual05());
+                getRecipeIdRes.setManualImg05(recipe.getManualImg05());
+                getRecipeIdRes.setManual06(recipe.getManual06());
+                getRecipeIdRes.setManualImg06(recipe.getManualImg06());
+                getRecipeIdRes.setManual07(recipe.getManual07());
+                getRecipeIdRes.setManualImg07(recipe.getManualImg07());
+                getRecipeIdRes.setManual08(recipe.getManual08());
+                getRecipeIdRes.setManualImg08(recipe.getManualImg08());
+                getRecipeIdRes.setManual09(recipe.getManual09());
+                getRecipeIdRes.setManualImg09(recipe.getManualImg09());
+                getRecipeIdRes.setManual10(recipe.getManual10());
+                getRecipeIdRes.setManualImg10(recipe.getManualImg10());
+                getRecipeIdRes.setManual11(recipe.getManual11());
+                getRecipeIdRes.setManualImg11(recipe.getManualImg11());
+                getRecipeIdRes.setManual12(recipe.getManual12());
+                getRecipeIdRes.setManualImg12(recipe.getManualImg12());
+                getRecipeIdRes.setManual13(recipe.getManual13());
+                getRecipeIdRes.setManualImg13(recipe.getManualImg13());
+                getRecipeIdRes.setManual14(recipe.getManual14());
+                getRecipeIdRes.setManualImg14(recipe.getManualImg14());
+                getRecipeIdRes.setManual15(recipe.getManual15());
+                getRecipeIdRes.setManualImg15(recipe.getManualImg15());
+                getRecipeIdRes.setManual16(recipe.getManual16());
+                getRecipeIdRes.setManualImg16(recipe.getManualImg16());
+                getRecipeIdRes.setManual17(recipe.getManual17());
+                getRecipeIdRes.setManualImg17(recipe.getManualImg17());
+                getRecipeIdRes.setManual18(recipe.getManual18());
+                getRecipeIdRes.setManualImg18(recipe.getManualImg18());
+                getRecipeIdRes.setManual19(recipe.getManual19());
+                getRecipeIdRes.setManualImg19(recipe.getManualImg19());
+                getRecipeIdRes.setManual20(recipe.getManual20());
+                getRecipeIdRes.setManualImg20(recipe.getManualImg20());
                 getRecipeIdRes.setRcpNaTip(recipe.getRcpNaTip());
 
                 return getRecipeIdRes;
@@ -255,40 +300,57 @@ public class RecipeService {
         return null;
     }
 
-    // ====================================================================
+    // TEST ====================================================================
 
-    /* keyword로 해당하는 레시피 조회 */
-    public List<RecipeResponse> RecipeByKeyword(String keyword) {
-        List<RecipeResponse> recipeResponses = recipeRepository.searchByKeyword(keyword)
+    /* 재료 검색 By Id, Name */
+    public  List<String> getDetailById(Long rcpId) { // success
+        Recipe recipe = recipeRepository.findByRcpId(rcpId)
+                .orElseThrow(() -> new RuntimeException("레시피를 찾을 수 없습니다."));
+        GetRecipeRes response = new GetRecipeRes(recipe);
+        return response.getRcpPartsDtls();
+    }
+//    public  List<String> getDetailByName(String rcpNm) { // 한글 읽기 X
+//        Recipe recipe = recipeRepository.findByRcpNm(rcpNm)
+//                .orElseThrow(() -> new RuntimeException("레시피를 찾을 수 없습니다."));
+//        RecipeRes response = new RecipeRes(recipe);
+//        return response.getRcpPartsDtls();
+//    }
+
+    /* 레시피 검색 By keyword */
+    public List<GetRecipeRes> getRecipesSearchedBy(String keyword) {
+        List<GetRecipeRes> getRecipeResponse = recipeRepository.searchRecipesByKeyword(keyword)
                 .stream()
-                .map(RecipeResponse::new)
-                .collect(Collectors.toList());
+                .map(GetRecipeRes::new)
+                .toList();
 
-        if (recipeResponses.isEmpty()) {
+        if (getRecipeResponse.isEmpty()) {
             throw new IllegalStateException();
         }
-        return recipeResponses;
+        return getRecipeResponse;
     }
 
-    /* 전체 레시피 목록 */
-    public List<RecipeResponse> getAllRecipes() {
-        List<RecipeResponse> recipeResponses =
+//    public List<String> searchByIngredient(String keyword) {
+//        Recipe recipe = recipeRepository.searchByIngredient(keyword)
+//                .orElseThrow(() -> new RuntimeException("레시피를 찾을 수 없습니다."));
+//        RecipeRes response = new RecipeRes(recipe);
+//        return response.getRcpPartsDtls();
+//    }
+
+    // ====================================================================
+
+    /* 전체 레시피 조회 */
+    public List<GetRecipeRes> getAllRecipes() {
+        List<GetRecipeRes> getRecipeRes =
                 recipeRepository.findAll()
                         .stream()
-                        .map(RecipeResponse::new)
+                        .map(GetRecipeRes::new)
                         .toList();
 
-        if (recipeResponses.isEmpty()) {
+        if (getRecipeRes.isEmpty()) {
             throw new IllegalStateException();
         }
-        return  recipeResponses;
+        return getRecipeRes;
     }
-
-
-    // ====================================================================
-
-    /* 키워드로 레시피 검색 */
-
 
 
     // ====================================================================
